contact us sending mail

--- a/contacts.html
+++ b/contacts.html
@@ -238,7 +238,7 @@
                                                         <div class="sc_section_inner">
                                                             <div class="sc_section_content_wrap">
                                                                 <h4 class="sc_title sc_title_regular sc_align_center">Email</h4>
-                                                                <span class="sc_highlight">help@conebyte.com</span>
+                                                                <span class="sc_highlight">info@tarmonia.com</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -332,7 +332,7 @@
                                 <br>
                                 <span class="accent1">Phone: 123-456-7890</span>
                                 <br> Fax: 010-927 7092
-                                <br> Email: help@conebyte.com
+                                <br> Email: info@tarmonia.com
                             </div>
                         </aside>
                         <aside class="column-1_4 widget widget_text">
