--- a/recipes.html
+++ b/recipes.html
@@ -147,12 +147,12 @@
         <div class="top_panel_title top_panel_style_1 title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_5 top_panel_title_inner top_panel_inner_style_1 title_present_inner breadcrumbs_present_inner">
                 <div class="content_wrap">
-                    <h1 class="page_title">Recipes</h1>
-                    <div class="breadcrumbs">
+                    <!-- <h1 class="page_title">Recipes</h1> -->
+                    <!-- <div class="breadcrumbs">
                         <a class="breadcrumbs_item home" href="index.html">Home</a>
                         <span class="breadcrumbs_delimiter"></span>
                         <span class="breadcrumbs_item current">Recipes</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
