cart and product page

--- a/Tarmonia/about-2.html
+++ b/Tarmonia/about-2.html
@@ -762,6 +762,9 @@
 <script type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
