--- a/Tarmonia/classic.html
+++ b/Tarmonia/classic.html
@@ -658,6 +658,8 @@
 <script type='text/javascript' src='js/custom/shortcodes.js'></script>
 <script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
 <script type='text/javascript' src='js/single-posts.js'></script>
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
 
 </body>
 
