--- a/Tarmonia/shop.html
+++ b/Tarmonia/shop.html
@@ -1062,6 +1062,7 @@
 <script type='text/javascript' src='js/vendor/woo/accounting.min.js'></script>
 <script type='text/javascript' src='js/vendor/woo/price-slider.min.js'></script>
 <script type="text/javascript" src="js/shop.js"></script>
+<script type="text/javascript" src="js/local-cart.js"></script>
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
         const sortOrder = document.getElementById('sortOrder');
