--- a/Tarmonia/single-post.html
+++ b/Tarmonia/single-post.html
@@ -691,6 +691,9 @@
 <script type='text/javascript' src='js/vendor/prettyPhoto/jquery.prettyPhoto.min.js'></script>
 <script type='text/javascript' src='js/single-posts.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
