--- a/Tarmonia/single-product.html
+++ b/Tarmonia/single-product.html
@@ -606,6 +606,7 @@
 <script type='text/javascript' src='js/vendor/underscore.min.js'></script>
 <script type='text/javascript' src='js/custom/util.min.js'></script>
 <script type='text/javascript' src='js/single-product.js'></script>
+<script type='text/javascript' src='js/local-cart.js'></script>
 
 </body>
 
