--- a/checkout.html
+++ b/checkout.html
@@ -213,5 +213,7 @@
             alert("Form submitted successfully!");
         });
     </script>
+    <!-- Global cart script so checkout can reflect the mini-cart/cart totals -->
+    <script type='text/javascript' src='js/local-cart.js'></script>
 </body>
 </html>
