--- a/contacts.html
+++ b/contacts.html
@@ -414,6 +414,9 @@
 <script type='text/javascript' src='js/vendor/core.googlemap.js'></script>
 <script type='text/javascript' src='js/custom/core.messages.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 </html><script type='text/javascript' src='js/custom/core.messages.js'></script>
 
