--- a/single-product.html
+++ b/single-product.html
@@ -234,7 +234,7 @@
                                             <div class="quantity">
                                                 <input type="number" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" pattern="[0-9]*" inputmode="numeric" />
                                             </div>
-                                            <button type="submit" class="add-to-cart-button">Add to cart</button>
+                                            <button type="submit" class="single_add_to_cart_button button alt add-to-cart-button">Add to cart</button>
                                             <input type="hidden" name="add-to-cart" value="412" />
                                             <input type="hidden" name="product_id" value="412" />
                                             <input type="hidden" name="variation_id" class="variation_id" value="0" />
@@ -588,6 +588,7 @@
 <script type='text/javascript' src='js/vendor/underscore.min.js'></script>
 <script type='text/javascript' src='js/custom/util.min.js'></script>
 <script type='text/javascript' src='js/single-product.js'></script>
+<script type='text/javascript' src='js/local-cart.js'></script>
 <script>
     // Dynamically update the <title> tag based on product
     document.addEventListener('DOMContentLoaded', function () {
