--- a/FAQ.html
+++ b/FAQ.html
@@ -437,6 +437,9 @@
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 <script type='text/javascript' src='js/custom/faq.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
