--- a/Tarmonia/index.html
+++ b/Tarmonia/index.html
@@ -1262,6 +1262,9 @@
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 <script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
