--- a/about-2.html
+++ b/about-2.html
@@ -746,6 +746,9 @@
 <script type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
