--- a/classic.html
+++ b/classic.html
@@ -489,6 +489,8 @@
 <script type='text/javascript' src='js/custom/shortcodes.js'></script>
 <script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
 <script type='text/javascript' src='js/blog.js'></script>
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
 
 </body>
 
