--- a/index.html
+++ b/index.html
@@ -1250,6 +1250,9 @@
 <script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 <script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
 
+<!-- Ensure cart is available globally -->
+<script type='text/javascript' src='js/local-cart.js'></script>
+
 </body>
 
 </html>
