--- a/recipe.html
+++ b/recipe.html
@@ -437,5 +437,7 @@
 <script type='text/javascript' src='js/vendor/underscore.min.js'></script>
 <script type='text/javascript' src='js/custom/util.min.js'></script>
 <script type='text/javascript' src='js/recipe.js'></script>
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
 </body>
 </html>
