--- a/single-post.html
+++ b/single-post.html
@@ -673,6 +673,8 @@
 <script type='text/javascript' src='js/custom/shortcodes.js'></script>
 <script type='text/javascript' src='js/vendor/prettyPhoto/jquery.prettyPhoto.min.js'></script>
 <script type='text/javascript' src='js/single-posts.js'></script>
+<!-- Global cart script -->
+<script type='text/javascript' src='js/local-cart.js'></script>
 
 </body>
 
