deleted the words of the main pictures and chaged the logo that was diffrent

--- a/single-product.html
+++ b/single-product.html
@@ -147,7 +147,7 @@
         </div>
         <div class="top_panel_title top_panel_style_1 title_present navi_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_1 top_panel_title_inner top_panel_inner_style_1 title_present_inner breadcrumbs_present_inner">
-                <div class="content_wrap">
+                <!-- <div class="content_wrap">
                     <div class="post_navi"></div>
                     <div class="breadcrumbs">
                         <a class="breadcrumbs_item home" href="index.html">Home</a>
@@ -156,7 +156,7 @@
                         <span class="breadcrumbs_delimiter"></span>
                         <span class="breadcrumbs_item current">Product Name</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="page_content_wrap page_paddings_yes">
@@ -490,7 +490,7 @@
                             <div class="widget_inner">
                                 <div class="logo">
                                     <a href="index.html">
-									<img src="images/footer-logo.png" class="logo_main" alt="" width="74" height="74">
+									<img src="images/tarmonia-new-tag.png" class="logo_main" alt="" width="74" height="74">
 									</a>
                                 </div>
                             </div>
