--- a/classic.html
+++ b/classic.html
@@ -165,14 +165,14 @@
         </div>
         <div class="top_panel_title top_panel_style_1 title_present breadcrumbs_present scheme_original">
             <div  class="bg_cust_4 top_panel_title_inner top_panel_inner_style_1 title_present_inner breadcrumbs_present_inner">
-                <div class="content_wrap">
+                <!-- <div class="content_wrap">
                     <h1 class="page_title">Blog</h1>
                     <div class="breadcrumbs">
                         <a class="breadcrumbs_item home" href="index.html">Home</a>
                         <span class="breadcrumbs_delimiter"></span>
                         <span class="breadcrumbs_item current">Blog</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="page_content_wrap page_paddings_yes">
